add missing sentence

--- a/new1/15-2.md
+++ b/new1/15-2.md
@@ -19,3 +19,4 @@
 Сергей уже ждал меня.
 Я помог ему приготовить ужин.
 Вечером пришли наши друзья Саша и Таня.
+Они　подарили　Сергею　галстук　и　книгу.
