add new article

--- a/new1/11-2.md
+++ b/new1/11-2.md
@@ -6,7 +6,7 @@
 историю и другие предметы.
 
 Её семья живёт в Китае, в городе Циндао. Отец -- инженер. Он
-работает в известной фирме Haier. Мать -- детский врач. Она
+работает в известной фирме "Haier". Мать -- детский врач. Она
 работает в поликлинике.
 
 Ван лань очень любит искусство.
@@ -18,6 +18,6 @@
 
 В свободное время Ван Лань и её русские друзья часто отдыхают
 вместе. Они гуляют, слушают музыку, танцуют, посещают выставки.
-Завтра они будут смотреть балет Спящая красавица в Большом театре.
+Завтра они будут смотреть балет "Спящая красавица" в Большом театре.
 Ван Лань очень любит Москву. Она думает, что Москва -- это красивый и
 интересный город.
