update missing sentence

--- a/new1/17-2.md
+++ b/new1/17-2.md
@@ -13,7 +13,9 @@
 нравилась. Мама преподавала литературу и
 русский язык в школе. Наташа тоже учится
 в этой школе. Интересные уроки мамы любили
-все. Но Наташа не могла решить, кем она будет.
+все. Подруга Наташи Нина даже говорила, что
+станет учительницей, как её мама.
+Но Наташа не могла решить, кем она будет.
 
 Однажды, когда Наташа училась в десятом классе,
 тяжело заболела Нина. Три месяца она не ходила
